feat: add business logic services for channel and message management
- Add channel service with public/private channel creation and management
- Add message service with attachment support and pagination
- Add comprehensive validation and error handling in business logic